# rift

./: .clang-format  .gitignore  Cargo.toml  Folder.DotSettings  README.md  Rift.sln  Rift.sln.DotSettings  install.py
cli/: Cargo.toml  build.rs
cli/src/: main.rs
cli/src/commands/: mod.rs
cli/src/ffi/: engine.rs
core/: CMakeLists.txt
core/include/rift/core/: Application.h  Definitions.h  Module.h
core/src/core/: Application.cpp  ModuleInstance.h
docfx/: docfx.json  index.md
engine/: Cargo.toml  README.md  build.rs  package-lock.json
engine/js/: build.ts  package.json  pnpm-lock.yaml  tsconfig.json
engine/js/src/: index.ts
engine/src/: blob.rs  dir.rs  errors.rs  ffi.rs  forward.rs  fs.rs  hash.rs  lib.rs  manifest.rs  module.rs  package.rs  plugin.rs  runtime.js  runtime.rs  task.rs  version.rs  workspace.rs
engine/src/events/: mod.rs
engine/src/manifest/: mod.rs  ops.rs
engine/src/paths/: mod.rs
engine/src/plsys/: mod.rs  ops.rs
engine/src/runtime/: builtin.js  evaluate.rs  loader.rs  mod.rs  ops.rs  script.rs  specifier.rs
engine/src/runtime/graph/: mod.rs
engine/src/schema/: mod.rs
engine/src/shared/: version.rs
engine/src/task/: alias.rs  mod.rs  ops.rs
engine/src/util/: mod.rs  path.rs  specifier.rs
engine/src/util/errors/: cli.rs  mod.rs
engine/src/util/fs/: as_posix.rs  mod.rs
engine/src/util/os/: unix.rs  windows.rs
engine/src/workspace/: mod.rs  ops.rs  package.rs  plugin_manager.rs
modules/sample/: CMakeLists.txt  main.cpp
rift/: CMakeLists.txt  Rift.sln  Rift.sln.DotSettings  main.cpp
rift-engine/: .clang-format  CMakeLists.txt  Folder.DotSettings  rift-engine.DotSettings
rift-engine/include/rift/fundamental/: Char.h  String.h
rift-engine/include/rift/tier1/: CUtlMemory.h  CUtlVector.h
rift-engine/src/: Main.cpp
rift-engine/src/rift/: Main.cpp
rift-engine/src/rift/bridge/: Adapter.cpp  Adapter.h  InteropService.cpp  InteropService.h
rift-engine/src/rift/bridge/natives/: CoreNatives.cpp  CoreNatives.h
rift-engine/src/rift/coreclr/: CoreCLR.cpp  CoreCLR.h  CoreCLRDelegates.h  Hostfxr.h
rift-engine/src/rift/fundamental/: PrimitivePath.cpp  PrimitivePath.h
rift/include/rift/core/: Application.h  Definitions.h  Module.h
rift/lib/: Startup.cpp
rift/lib/core/: ModuleDescriptor.h  ModuleInstance.cpp
rift/src/: Startup.cpp
rift/src/Rift/: Program.cs
rift/src/Rift.Module.NuGet/: NuGetModule.cs  Rift.Module.NuGet.csproj
rift/src/Rift.Runtime/: Bootstrap.cs  Rift.Runtime.csproj
rift/src/Rift.Runtime.Tests/: UnitTest1.cs
rift/src/Rift.Runtime/Application/: ApplicationHost.Unix.cs  ApplicationHost.Windows.cs  ApplicationHost.cs  ApplicationStatus.cs  InstallationInformation.cs  UserInformation.cs
rift/src/Rift.Runtime/Collections/Generic/: DictionaryExtension.cs  ListExtension.cs
rift/src/Rift.Runtime/Commands/: UserCommand.cs  UserCommandEntry.cs
rift/src/Rift.Runtime/Commands/Cli/: UserCommand.cs  UserCommandEntry.cs
rift/src/Rift.Runtime/Commands/Data/: CommandArguments.cs
rift/src/Rift.Runtime/Commands/Managers/: CommandManager.cs
rift/src/Rift.Runtime/Constants/: Definitions.cs
rift/src/Rift.Runtime/Fundamental/: Tty.cs
rift/src/Rift.Runtime/Fundamental/Application/: ApplicationHost.Unix.cs  ApplicationHost.Windows.cs  ApplicationHost.cs  InstallationInformation.cs  UserInformation.cs
rift/src/Rift.Runtime/IO/: Tty.cs
rift/src/Rift.Runtime/Interfaces/: InterfaceAlreadyExistsException.cs  InterfaceManager.cs  InterfaceNotFoundException.cs
rift/src/Rift.Runtime/Interfaces/Abstractions/: IInterface.cs
rift/src/Rift.Runtime/Interfaces/Exceptions/: InterfaceAlreadyExistsException.cs  InterfaceNotFoundException.cs
rift/src/Rift.Runtime/Interfaces/Managers/: InterfaceManager.cs
rift/src/Rift.Runtime/Manifest/: EitherManifest.cs  Manifest.cs  RiftManifest.cs  WorkspaceManifest.cs
rift/src/Rift.Runtime/Manifest/Real/: Manifest.cs  ProjectManifest.cs  TargetManifest.cs
rift/src/Rift.Runtime/Manifest/Rift/: PluginManifest.cs  RiftManifest.cs
rift/src/Rift.Runtime/Manifest/Virtual/: FolderManifest.cs  VirtualManifest.cs  WorkspaceManifest.cs
rift/src/Rift.Runtime/Modules/Abstractions/: IModule.cs  RiftModule.cs
rift/src/Rift.Runtime/Modules/Attributes/: ModuleSharedAttribute.cs
rift/src/Rift.Runtime/Modules/Fundamental/: ModuleIdentity.cs  ModuleInstance.cs  ModuleStatus.cs  ModuleType.cs
rift/src/Rift.Runtime/Modules/Loader/: ModuleAssemblyContext.cs  ModuleLoadContext.cs
rift/src/Rift.Runtime/Modules/Managers/: ModuleManager.cs
rift/src/Rift.Runtime/Plugins/: PluginContext.cs  PluginInstance.cs  PluginManager.cs  PluginSharedAttribute.cs
rift/src/Rift.Runtime/Plugins/Abstractions/: IPlugin.cs
rift/src/Rift.Runtime/Plugins/Annotations/: PluginSharedAttribute.cs
rift/src/Rift.Runtime/Plugins/Fundamental/: PluginIdentity.cs  PluginInstance.cs  PluginRuntimeInfo.cs  PluginStatus.cs
rift/src/Rift.Runtime/Plugins/Loader/: PluginAssemblyContext.cs  PluginContext.cs  PluginLoadContext.cs
rift/src/Rift.Runtime/Plugins/Managers/: PluginManager.cs
rift/src/Rift.Runtime/Schema/: TomlFolder.cs  TomlManifest.cs  TomlPlugin.cs  TomlTarget.cs  TomlWorkspace.cs
rift/src/Rift.Runtime/Scripting/: Dependencies.cs  Package.cs  Plugins.cs  ScriptManager.cs
rift/src/Rift.Runtime/Tasks/: RiftTaskExtensions.cs  TaskConfiguration.cs  TaskExecutor.cs  TaskGraph.cs  TaskNotFoundException.cs  TaskReport.cs  TaskScheduler.cs
rift/src/Rift.Runtime/Workspace/: IWorkspaceListener.cs  MaybePackage.cs  PackageInstance.cs  PackageReference.cs  WorkspaceManager.cs  WorkspaceStatus.cs
rift/src/core/: Application.cpp
runtime/: Cargo.toml  README.md  build.ts  package-lock.json  package.json  tsconfig.json
runtime/js/: build.ts  package.json  pnpm-lock.yaml
runtime/js/src/: index.ts
runtime/js/src/engine/: version.ts
runtime/js/src/global/: manifest.ts  schema.ts
runtime/js/src/managers/: PluginManager.ts  TaskManager.ts  WorkspaceManager.ts
runtime/src/: forward.rs  index.ts  lib.rs  loader.rs  runtime.rs  shared.rs  specifier.rs  transpile.rs  vm.rs
(+547 files in other folders)
