[workspace]
resolver = "2"
members = ["cli", "engine", "runtime"]

[workspace.dependencies]
clap = { version = "4.5.13", features = ["string"] }
anyhow = "1.0.86"
serde = "1.0.205"
serde_toml = "0.0.1"
serde_json = "1.0.125"
toml = "0.8.19"
tracing = "0.1.40"

# deno全家桶，跟runtime的版本走
deno_runtime = "0.180.0"
deno_core = "0.311.0"
deno_ast = { version = "0.42.1", features = ["transpiling"] }
tokio = { version = "1.36.0", features = ["full"] }

# windows deps
junction = "0.2.0"
winapi = "0.3.9"
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_Media",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_WindowsProgramming",
    "Wdk",
    "Wdk_System",
    "Wdk_System_SystemInformation",
    "Win32_System_Pipes",
    "Wdk_Storage_FileSystem",
    "Win32_System_Registry",
] }
once_cell = "1.19.0"

[workspace.package]
version = "0.1.0"
edition = "2021"
