[workspace]
resolver = "2"
members = ["cli", "engine"]


[workspace.dependencies]
clap = { version = "4.5.13", features = ["string"] }
anyhow = "1.0.86"
serde = "1.0.205"
serde_toml = "0.0.1"
serde_json = "1.0.125"
toml = "0.8.19"
tracing = "0.1.40"

# windows deps
junction = "0.2.0"
winapi = "0.3.9"
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_Media",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_WindowsProgramming",
    "Wdk",
    "Wdk_System",
    "Wdk_System_SystemInformation",
    "Win32_System_Pipes",
    "Wdk_Storage_FileSystem",
    "Win32_System_Registry",
] }
tokio = { version = "1.39.2", features = ["full"] }
once_cell = "1.19.0"
url = { version = "2.5.2", features = ["serde"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
