[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "engine"

[dependencies]
homedir = "0.3.3"
once_cell = "1.19.0"
reqwest = "0.12.5"
serde_with = "3.9.0"
static_init = "1.0.3"
deno_bindgen = "0.8.1"

tokio.workspace = true
deno_ast.workspace = true
deno_core.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_toml.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
url = "2.5.2"
relative-path = { version = "1.9.3", features = ["serde"] }
rust-embed = { version = "8.5.0", features = [
    "debug-embed",
    "interpolate-folder-path",
    "include-exclude",
] }

lazycell = "1.3.0"
sha2 = "0.10.8"
uuid = { version = "1.10.0", features = ["v4"] }
rand = "0.8.5"
walkdir = "2.5.0"
parking_lot = "0.12.3"


[target.'cfg(windows)'.dependencies]
junction.workspace = true
winapi = { workspace = true, features = [
    "knownfolders",
    "mswsock",
    "objbase",
    "shlobj",
    "tlhelp32",
    "winbase",
    "winerror",
    "winsock2",
    "processenv",
] }


[build-dependencies]
deno_ast.workspace = true
deno_core.workspace = true
