[package]
name = "runtime"
version.workspace = true
edition.workspace = true

[dependencies]
rust-embed = { version = "8.5.0", features = [
    "include-exclude",
    "debug-embed",
    "interpolate-folder-path",
] }
relative-path = { version = "1.9.3", features = ["serde"] }

engine = { path = "../engine" }

clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_toml.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
deno_ast.workspace = true
deno_core.workspace = true
junction.workspace = true
winapi.workspace = true
windows-sys.workspace = true
tokio.workspace = true
once_cell.workspace = true
url.workspace = true
